--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Keeper App</title>
+    <title>Accio Books</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +22,7 @@
     <div class="row">
          <!--main content area-->
         <div class="col-md-8">
-            <!-- <img src="logo.png" class="responsive"> -->
+           <h1>Accio Books</h1>
             <div class="card mb-4">
                 <h2 class="card-header" id="fileName">Book Title</h2>
                 <div class="card-body">
@@ -75,24 +75,12 @@
                      <div class="row">
                          <div class="col-md-12">
                              <ul class="list-unstyled mb-0" id="mostUsed">
+                               <%= maxWords%>(<%=maxCount%>)
 
                              </ul>
                          </div>
                      </div>
                  </div>
-             </div>
-             <!--Least used words-->
-             <div class="card my-4">
-                <h5 class="card-header">Least Used Words</h5>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <ul class="list-unstyled mb-0" id="leastUsed">
-                                
-                            </ul>
-                        </div>
-                    </div>
-                </div>
              </div>
              <!--document stats-->
              <div class="card my-4">
